// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalRenderer should pass props to modal: should render with title 'FooBar' 1`] = `
<div>
  <div
    class="modal-renderer-root"
  >
    <div
      class="modal-container d-block fade modal show"
      role="button"
      tabindex="0"
    >
      <div
        aria-modal="true"
        class="modal-dialog"
        role="dialog"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <div
              class="h4 modal-title"
            >
              FooBar
            </div>
            <button
              aria-label="Close"
              class="button-root close btn btn-secondary"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times icon-root"
                role="presentation"
              >
                <use
                  href="#times"
                />
              </svg>
            </button>
          </div>
          <div
            class="modal-body inline-scroller"
          >
            <div
              class="h4"
            >
              Modal Body
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="button-root btn btn-secondary"
              type="button"
            >
              Cancel
            </button>
            <button
              class="button-root btn btn-primary"
              type="button"
            >
              Submit
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-backdrop fade show"
    />
  </div>
</div>
`;

exports[`ModalRenderer should render 1`] = `
<div>
  <div
    class="modal-renderer-root"
  />
</div>
`;

exports[`ModalRenderer should render multiple modals 1`] = `
<div>
  <div
    class="modal-renderer-root"
  >
    <div
      class="modal-container d-block fade modal show"
      role="button"
      tabindex="0"
    >
      <div
        aria-modal="true"
        class="modal-dialog"
        role="dialog"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <div
              class="h4 modal-title"
            >
              Modal
            </div>
            <button
              aria-label="Close"
              class="button-root close btn btn-secondary"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times icon-root"
                role="presentation"
              >
                <use
                  href="#times"
                />
              </svg>
            </button>
          </div>
          <div
            class="modal-body inline-scroller"
          >
            <div
              class="h4"
            >
              Modal Body
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="button-root btn btn-secondary"
              type="button"
            >
              Cancel
            </button>
            <button
              class="button-root btn btn-primary"
              type="button"
            >
              Submit
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-container d-block fade modal show"
      role="button"
      tabindex="0"
    >
      <div
        aria-modal="true"
        class="modal-dialog"
        role="dialog"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <div
              class="h4 modal-title"
            >
              Modal
            </div>
            <button
              aria-label="Close"
              class="button-root close btn btn-secondary"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times icon-root"
                role="presentation"
              >
                <use
                  href="#times"
                />
              </svg>
            </button>
          </div>
          <div
            class="modal-body inline-scroller"
          >
            <div
              class="h4"
            >
              Modal Body
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="button-root btn btn-secondary"
              type="button"
            >
              Cancel
            </button>
            <button
              class="button-root btn btn-primary"
              type="button"
            >
              Submit
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-backdrop fade show"
    />
  </div>
</div>
`;

exports[`ModalRenderer should render test modal 1`] = `
<div>
  <div
    class="modal-renderer-root"
  >
    <div
      class="modal-container d-block fade modal show"
      role="button"
      tabindex="0"
    >
      <div
        aria-modal="true"
        class="modal-dialog"
        role="dialog"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <div
              class="h4 modal-title"
            >
              Modal
            </div>
            <button
              aria-label="Close"
              class="button-root close btn btn-secondary"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times icon-root"
                role="presentation"
              >
                <use
                  href="#times"
                />
              </svg>
            </button>
          </div>
          <div
            class="modal-body inline-scroller"
          >
            <div
              class="h4"
            >
              Modal Body
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="button-root btn btn-secondary"
              type="button"
            >
              Cancel
            </button>
            <button
              class="button-root btn btn-primary"
              type="button"
            >
              Submit
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-backdrop fade show"
    />
  </div>
</div>
`;
